2009-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* /device/lib/z80/mod.s,
	  device/lib/z80/div.s,
	  device/lib/z80/mulchar.s,
	  device/lib/z80/mul.s,
	  device/lib/z80/divsigned.s,
	  device/lib/z80/Makefile.in:
	  Implemented RFE #1702376.

2009-01-05 Borut Razem <borut.razem AT siol.net>

	* as/link/lksdcclib.c:
	  fixed linker hanging in INDEXLIB is not defined (hc08)

2009-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Implemented RFE #2485684, and some further improvements of HL caching
	  including a bugfix.
	* src/z80/peeph-z80.def:
	  Fixed a bug exposed by implementing RFE #2485684.

2009-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Peephole improvements.
	* src/z80/gen.c,
	  src/z80/main.c,
	  device/include/string.h,
	  device/lib/z80/memmove.s:
	  Minor code cleanup.
	* device/lib/z80/Makefile.in,
	  device/lib/Makefile.in,
	  support/regression/tests/memory.c,
	  device/lib/z80/strlen.s:
	  Partially implemented RFE #2471534.

2009-01-04 Borut Razem <borut.razem AT siol.net>

	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.6
	  due changes in sdcc asxxxx linkers - it sholud be done 2 days ago :(
	* doc/README.txt: updated John Hartman's e-mail address
	* as/link/lkrel.c, as/link/lksdcclib.c:
	  fixed bug #2484677: Linker hangs
	* src/z80/peep.c: fixed msvc warning C4047:
	  'return' : 'int ' differs in levels of indirection from 'char *'
	* config.dsp: as/lib corrected to as/link

2009-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Implemented RFE #2484693.
	* src/z80/peeph-z80.def:
	  Some peephole improvements.

2009-01-03 Borut Razem <borut.razem AT siol.net>

	* as/link/lklibr.c:
	  fixed warning: 'ret' may be used uninitialized in this function

2009-01-02 Borut Razem <borut.razem AT siol.net>

	* as/link/lklib.c, as/link/lksdcclib.c, as/link/lklibr.h,
	  as/link/getline.[ch], as/link/lkrel.[ch]: added,
	  made support for differnet library formats more flexible,